force-app/main/default/objects/Opportunity/fields/ComprovanteAcordoAnexado__c.field-meta.xml
<CustomField>
    <fullName>ComprovanteAcordoAnexado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Comprovante de Acordo Anexado</label>
    <type>Checkbox</type>
</CustomField>