force-app/main/default/objects/Opportunity/fields/ContratoAssinadoAnexado__c.field-meta.xml
<CustomField>
    <fullName>ContratoAssinadoAnexado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contrato Assinado Anexado</label>
    <type>Checkbox</type>
</CustomField>