force-app/main/default/objects/Opportunity/fields/Custo_Estimado__c.field-meta.xml
<CustomField>
    <fullName>Custo_Estimado__c</fullName>
    <label>Custo Estimado</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>