force-app/main/default/objects/Opportunity/fields/Documentos_Assinados__c.field-meta.xml
<CustomField>
    <fullName>Documentos_Assinados__c</fullName>
    <label>Documentos Assinados</label>
    <length>255</length>
    <type>Text</type>
</CustomField>