force-app/main/default/objects/Opportunity/fields/Email_do_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Email_do_Cliente__c</fullName>
    <label>Email do Cliente</label>
    <type>Email</type>
</CustomField>