force-app/main/default/objects/Opportunity/fields/NdaAnexado__c.field-meta.xml
<CustomField>
    <fullName>NdaAnexado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NDA Anexado</label>
    <type>Checkbox</type>
</CustomField>