force-app/main/default/objects/Opportunity/fields/PropostaAnexada__c.field-meta.xml
<CustomField>
    <fullName>PropostaAnexada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proposta Anexada</label>
    <type>Checkbox</type>
</CustomField>