force-app/main/default/objects/Opportunity/fields/Tecnologia_do_Projeto__c.field-meta.xml
<CustomField>
    <fullName>Tecnologia_do_Projeto__c</fullName>
    <label>Tecnologia do Projeto</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>JavaScript</fullName>
            </value>
            <value>
                <fullName>C#</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>