force-app/main/default/objects/Opportunity/fields/Tempo_Estimado__c.field-meta.xml
<CustomField>
    <fullName>Tempo_Estimado__c</fullName>
    <label>Tempo Estimado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>