force-app/main/default/objects/Opportunity/validationRules/OpportunityFormalizacaoWon.validationRule-meta.xml
<ValidationRule>
    <fullName>OpportunityFormalizacaoWon</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(StageName),
    ISPICKVAL(StageName, &quot;Closed Won&quot;),
    OR(
        NOT(ComprovanteAcordoAnexado__c),
        NOT(ContratoAssinadoAnexado__c)
    )
)</errorConditionFormula>
    <errorMessage>Para fechar a oportunidade como ganha, você deve ter o Comprovante de Acordo e o Contrato Assinado anexados e confirmados.</errorMessage>
</ValidationRule>