force-app/main/default/objects/Opportunity/validationRules/OpportunityNegociacaoFormalizaca.validationRule-meta.xml
<ValidationRule>
    <fullName>OpportunityNegociacaoFormalizaca</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(StageName),
    ISPICKVAL(StageName, &quot;Formalization&quot;),
    OR(
        ISBLANK( Valor_Proposta__c ),
        NOT( NdaAnexado__c ),
        NOT(PropostaAnexada__c)
    )
)</errorConditionFormula>
    <errorMessage>Para formalizar, você deve ter o Valor da Proposta preenchido e confirmar que o NDA e a Proposta foram anexados (marque as caixas de seleção).</errorMessage>
</ValidationRule>