force-app/main/default/objects/Opportunity/validationRules/OpportunityQualificacaoNegociacao.validationRule-meta.xml
<ValidationRule>
    <fullName>OpportunityQualificacaoNegociacao</fullName>
    <active>true</active>
    <errorConditionFormula>AND(	
ISCHANGED(StageName),	
ISPICKVAL(StageName, &quot;Negotiation/Review&quot;),	
OR(	
ISBLANK(TEXT(Tecnologia_do_Projeto__c)),	
ISBLANK( Tempo_Estimado__c ),	
ISBLANK(Data_Inicio__c),	
ISBLANK(Data_Fim__c),	
ISBLANK( Custo_Estimado__c )	
)	
)</errorConditionFormula>
    <errorMessage>Preencha todos os detalhes do projeto (Tecnologia, Tempo, Datas e Custo) antes de avançar para a Negociação.</errorMessage>
</ValidationRule>